--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
 
 		<section class="job">
-            <p>Current/Recent Job</p>
+            <h2>Current/Recent Job</h2>
 			<p>[Quality checking items and helping people learn the process]</p>
         </section>		
 
