--- a/index.html
+++ b/index.html
@@ -31,34 +31,34 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Alexander Tardecilla]</h1>
-            <h1>Preferred Name: [Alex]</h1>
+            <h1>[Your First and Last Name]</h1>
+            <h1>Preferred Name: [Your Preferred Name]</h1>
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: [Junior]</h2>
-			<h2>Lewis major/minor/concentrations: [Computer Science]</h2>
-			<h2>Reasons for pursuing this degree: [I like technology]</h2>
+			<h2>Year at Lewis: [Your Years at Lewis]</h2>
+			<h2>Lewis major/minor/concentrations: [Your major/minor/concentrations]</h2>
+			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
         </section>
 
 		<section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>[Requirement for degree / interests]</p>
+            <p>[Your reasons for taking this course]</p>
         </section>
 
 		<section class="job">
-            <h2>Current/Recent Job</h2>
-			<p>[Quality checking items and helping people learn the process]</p>
+            <p>Current/Recent Job</p>
+			<p>[Your job responsibilities]</p>
         </section>		
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[I like photography, basketball, working out, and eventually I want to travel the world.]</p>
+            <p>[Your hobbies or special interests]</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>[I was able to travel and study abroad in Japan for about 1 month in 2024]</p>
+            <p>[A fun fact about yourself]</p>
         </section>
     </div>
 </body>
