--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color:#121312;
             line-height: 1.6;
         }
         .container {
@@ -14,51 +14,92 @@
             overflow: hidden;
         }
         .main-info {
-            background: #333;
+            background:#B83A2D;
             color: #fff;
             padding: 20px;
         }
         .main-info h1 {
             margin: 0;
         }
-        .hobbies, .lewis, .course, .job .fun-fact{
-            background: #e7e7e7;
+        .hobbies, .lewis, .course, .job, .fun-fact, .intro, .learn {
+            background: #dacbb6;
             padding: 15px;
             margin-bottom: 10px;
+        }
+
+        ul {
+            list-style-type: square;
+            margin-left: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Alexander Tardecilla]</h1>
-            <h1>Preferred Name: [Alex]</h1>
+            <h1>Alexander Tardecilla’s Website</h1>
+            <h1>Preferred Name: Alex</h1>
+            <h2>Email: <a href>alexandervtardecil@lewisu.edu</a></h2>
+            <h3>Discord Username: alexerinooo</h3>
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: [Junior]</h2>
-			<h2>Lewis major/minor/concentrations: [Computer Science]</h2>
-			<h2>Reasons for pursuing this degree: [Interest in technology]</h2>
+            <h2>Year at Lewis: Junior</h2>
+            <h2>Lewis major/minor/concentrations: Computer Science</h2>
+            <h2>Reasons for pursuing this degree: I’m pursuing this degree because I have an interest in the
+                technology field as a whole. I enjoy working with computers and would like to work with them for a living.
+            </h2>
         </section>
 
-		<section class="course">
+        <section class="intro">
+            <h2>Introduction</h2>
+            <p>Hello! I am Alex. I am junior year student at Lewis and I’m studying computer science.
+                I have 4 sisters, 0 brothers and am the middle child in my family. This means that
+                I am clearly the favorite child. I like making people laugh, good questions, and eventually want to
+                travel the world.
+            </p>
+        </section>
+
+        <section class="learn">
+            <h2>What I Hope to Learn</h2>
+            <p>
+                <ul>
+                    <li>Agile Methodology</li>
+                    <li>Collaborative Projects</li>
+                    <li>Cloud Computing</li>
+                </ul>
+            </p>
+        </section>
+
+        <section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>[Requirement for major, general interest]</p>
+            <p>It’s a requirement for my major, but overall I’m looking to grow my problem-solving skills and would like
+                to get a taste of software engineering.
+            </p>
         </section>
 
-		<section class="job">
-            <p>Current/Recent Job</p>
-			<p>[Your job responsibilities]</p>
+        <section class="job">
+            <h2>Current/Recent Job</h2>
+            <p>Currently I work at Amazon as a sortation associate. I help quality check items for resale
+                and help other people learn the process.
+            </p>
         </section>		
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
+            <p>I like doing many different hobbies and special interests so it’s difficult to pick a few.</p>
+            <p>Currently I have been enjoying</p>
+            <ul>
+                <li>Weightlifting</li>
+                <li>Photography/Videography</li>
+                <li>Basketball</li>   
+            </ul>
+            <p><a href="https://www.healthline.com/health/fitness/benefits-of-strength-training">Why I like weightlifting</a>
+            </p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>[A fun fact about yourself]</p>
+            <p>Last year I had the opportunity to study abroad in Japan for about a month!</p>
         </section>
     </div>
 </body>
