added kanji next to romaji

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <section class="fun-fact">
             <h2>Fun Fact</h2>
             <p>Last year I had the opportunity to study abroad in Japan for about a month!</p>
-            <p>One philosophy that I thought was cool was the philosophy of ichigoichie
+            <p>One philosophy that I thought was cool was the philosophy of ichigoichie(一期一会)
                 which translates to “one time, one meeting”. It means that every moment is unique, so cherish it.
                 (Also I practiced the curly quotes here.)
             </p>
