fixed quotes and apostrophes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section class="lewis">
             <h2>Year at Lewis: Junior</h2>
             <h2>Lewis major/minor/concentrations: Computer Science</h2>
-            <h2>Reasons for pursuing this degree: I’m pursuing this degree because I have an interest in the
+            <h2>Reasons for pursuing this degree: I&#8217;m pursuing this degree because I have an interest in the
                 technology field as a whole. I enjoy working with computers and would like to work with them for a living.
             </h2>
         </section>
@@ -91,7 +91,7 @@
         <section class="intro">
             <h2>Introduction</h2>
             <div class="intro-flex">
-                    <p>Hello! I am Alex. I am junior year student at Lewis and I’m studying computer science. I am Filipino.
+                    <p>Hello! I am Alex. I am junior year student at Lewis and I&#8217;m studying computer science. I am Filipino.
                         I have 4 sisters, 0 brothers and am the middle child in my family. This means that
                         I am clearly the favorite child. I have 2 dogs, named Mack and Tank. I think old technology is extremely cool, especially old cameras.
                         I like making people laugh, good questions, and eventually want to
@@ -116,7 +116,7 @@
 
         <section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>It’s a requirement for my major, but overall I’m looking to grow my problem-solving skills and would like
+            <p>It&#8217;s a requirement for my major, but overall I&#8217;m looking to grow my problem-solving skills and would like
                 to get a taste of software engineering.
             </p>
         </section>
@@ -130,7 +130,7 @@
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>I like doing many different hobbies and special interests so it’s difficult to pick a few.</p>
+            <p>I like doing many different hobbies and special interests so it&#8217;s difficult to pick a few.</p>
             <p>Currently I have been enjoying</p>
             <ul>
                 <li>Weightlifting</li>
@@ -145,7 +145,7 @@
             <h2>Fun Fact</h2>
             <p>Last year I had the opportunity to study abroad in Japan for about a month!</p>
             <p>One philosophy that I thought was cool was the philosophy of ichigoichie(一期一会)
-                which translates to “one time, one meeting”. It means that every moment is unique, so cherish it.
+                which translates to &#8220;one time, one meeting&#8221;. It means that every moment is unique, so cherish it.
                 (Also I practiced the curly quotes here.)
             </p>
         </section>
